@@ -4,17 +4,18 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.concurrent.ExecutionException;
+import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
-import java.util.concurrent.TimeoutException;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
+import jakarta.validation.constraints.NotNull;
 
 import com.bakdata.conquery.io.cps.CPSType;
 import com.bakdata.conquery.models.datasets.Column;
 import com.bakdata.conquery.models.datasets.concepts.filters.specific.SelectFilter;
-import com.bakdata.conquery.models.events.Bucket;
 import com.bakdata.conquery.models.events.stores.root.StringStore;
+import com.bakdata.conquery.models.identifiable.ids.specific.BucketId;
 import com.bakdata.conquery.models.identifiable.ids.specific.ColumnId;
 import com.bakdata.conquery.models.identifiable.ids.specific.TableId;
 import com.bakdata.conquery.models.jobs.Job;
@@ -27,22 +28,29 @@ import com.bakdata.conquery.models.worker.Namespace;
 import com.bakdata.conquery.models.worker.Worker;
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonIgnore;
-import com.google.common.util.concurrent.Futures;
+import com.google.common.collect.Iterables;
 import com.google.common.util.concurrent.ListenableFuture;
 import com.google.common.util.concurrent.ListeningExecutorService;
 import com.google.common.util.concurrent.MoreExecutors;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.concurrent.BasicThreadFactory;
 
 /**
  * This Job collects the distinct values in the given columns and returns a {@link RegisterColumnValues} message for each column to the namespace on the manager.
  */
 @Slf4j
-@RequiredArgsConstructor(onConstructor_ = @JsonCreator)
+@RequiredArgsConstructor(onConstructor_ = {@JsonCreator})
 @CPSType(id = "COLLECT_COLUMN_VALUES", base = NamespacedMessage.class)
 public class CollectColumnValuesJob extends WorkerMessage implements ActionReactionMessage {
 
+	public final int columValueChunkSize;
+	/**
+	 * Trying to rate-limit how many threads are actively allocating column-values.
+	 */
+	private final int MAX_THREADS = Math.min(Runtime.getRuntime().availableProcessors(), 5);
+	@NotNull
 	@Getter
 	private final Set<ColumnId> columns;
 
@@ -55,49 +63,69 @@ public class CollectColumnValuesJob extends WorkerMessage implements ActionReact
 
 	@Override
 	public void react(Worker context) throws Exception {
-		final Map<TableId, List<Bucket>> table2Buckets = context.getStorage().getAllBuckets()
-																.collect(Collectors.groupingBy(Bucket::getTable));
+		final Map<TableId, List<BucketId>> table2Buckets;
+		try (Stream<BucketId> allBuckets = context.getStorage().getAllBucketIds()) {
+			table2Buckets = allBuckets
+					.collect(Collectors.groupingBy(bucketId -> bucketId.getImp().getTable()));
+		}
 
+		final BasicThreadFactory threadFactory =
+				new BasicThreadFactory.Builder()
+						.namingPattern(getClass().getSimpleName() + "-Worker-%d").build();
 
-		final ListeningExecutorService jobsExecutorService = MoreExecutors.listeningDecorator(context.getJobsExecutorService());
+		final ListeningExecutorService jobsExecutorService = MoreExecutors.listeningDecorator(Executors.newFixedThreadPool(MAX_THREADS, threadFactory));
 
 		final AtomicInteger done = new AtomicInteger();
 
+		getProgressReporter().setMax(columns.stream()
+											.filter(column -> table2Buckets.get(column.getTable()) != null).count());
 
 		final List<? extends ListenableFuture<?>> futures =
 				columns.stream()
-					   .filter(column -> table2Buckets.get(column.getTable()) != null)
-					   .map(ColumnId::resolve)
-					   .map(column ->
-									jobsExecutorService.submit(() -> {
-										final List<Bucket> buckets = table2Buckets.get(column.getTable().getId());
+					   .filter(column -> table2Buckets.containsKey(column.getTable()))
+					   .map(column -> jobsExecutorService.submit(() -> {
+						   final List<BucketId> buckets = table2Buckets.get(column.getTable());
 
-										final Set<String> values = buckets.stream()
-																		  .flatMap(bucket -> ((StringStore) bucket.getStore(column)).streamValues())
-																		  .collect(Collectors.toSet());
-										context.send(new RegisterColumnValues(getMessageId(), context.getInfo().getId(), column.getId(), values));
-										log.trace("Finished collections values for column {} as number {}", column, done.incrementAndGet());
-									})
+								final Set<String> values = buckets.stream()
+																  .map(BucketId::resolve)
+																  .flatMap(bucket -> ((StringStore) bucket.getStore(column.resolve())).streamValues())
+																  .collect(Collectors.toSet());
+
+								log.trace("Finished collecting {} values for column {}", values.size(), column);
+
+								// Chunk values, to produce smaller messages
+								final Iterable<List<String>> partition = Iterables.partition(values, columValueChunkSize);
+
+								log.trace("BEGIN Sending column values for {}. {} total values in {} sized batches",
+										  column, values.size(), columValueChunkSize
+								);
+
+								int i = 0;
+								for (List<String> chunk : partition) {
+									// Send values to manager
+									final RegisterColumnValues message =
+											new RegisterColumnValues(getMessageId(), context.getInfo().getId(), column, chunk);
+
+									context.send(message);
+
+									log.trace("Finished sending chunk {} for column '{}'", i++, column);
+								}
+
+								getProgressReporter().report(1);
+								log.trace("Finished collections values for column {} as number {}", column, done.incrementAndGet());
+							})
 					   )
-					   .collect(Collectors.toList());
+					   .toList();
 
 
-		final ListenableFuture<List<Object>> all = Futures.allAsList(futures);
+		// We may do this, because we own this specific ExecutorService.
+		jobsExecutorService.shutdown();
 
-		while (true) {
-			try {
-				all.get(30, TimeUnit.SECONDS);
-				break;
-			}
-			catch (ExecutionException e) {
-				throw new RuntimeException(e);
-			}
-			catch (TimeoutException e) {
-				log.debug("Still waiting for jobs: {} of {} done", done.get(), futures.size());
-			}
+		while (!jobsExecutorService.awaitTermination(30, TimeUnit.SECONDS)) {
+			log.debug("Still waiting for jobs: {} of {} done", done.get(), futures.size());
 		}
 
-		log.info("Finished collecting values from these columns: {}", Arrays.toString(columns.toArray()));
+		log.info("Finished collecting values from {}", Arrays.toString(columns.toArray()));
 		context.send(new FinalizeReactionMessage(getMessageId(), context.getInfo().getId()));
 	}
 
@@ -121,7 +149,7 @@ public class CollectColumnValuesJob extends WorkerMessage implements ActionReact
 			log.debug("{} shrinking searches", this);
 
 			for (ColumnId columnId : columns) {
-				Column column = columnId.resolve();
+				final Column column = columnId.resolve();
 				try {
 					filterSearch.shrinkSearch(column);
 				}
@@ -149,7 +177,6 @@ public class CollectColumnValuesJob extends WorkerMessage implements ActionReact
 				}
 			}
 
-			getProgressReporter().done();
 			log.debug("FINISHED counting search totals on {}", namespace.getDataset().getId());
 		}
 
